<resources>
    <string name="app_name">Pesan Botol</string>\
    <string name="imageauth">imageAuth</string>
    <string name="i_agree_with_terms_and_privacy">I agree with Terms and Privacy</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="log_in"> <u>Log In</u></string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="signUp"><u>Sign Up </u> </string>
</resources>